--- a/RelatedChat/Resources/Web/privacy.html
+++ b/RelatedChat/Resources/Web/privacy.html
@@ -8,7 +8,7 @@ p {
 </style>
 </head><body>
 <p><b>Privacy Policy</b></p>
-<p>This privacy policy governs your use of the software application PremiumChat ("Application") for mobile devices that was created by Related Code. The Application is a full native iPhone app to create realtime, text based group or private chat with Firebase.</p>
+<p>This privacy policy governs your use of the software application Related Chat ("Application") for mobile devices that was created by Related Code. The Application is a full native iPhone app to create realtime, text based group or private chat with Firebase.</p>
 
 <p><strong>What information does the Application obtain and how is it used?</strong></p>
 
